//使用 proto3 语法 ,未指定则使用proto2
syntax = "proto3";

//生成 proto 文件所在包路径
package com.xian.jdk.proto;

import "google/protobuf/any.proto";

//生成 proto 文件所在包路径
option java_package = "com.xian.jdk.proto";

//生成 proto 文件名
option java_outer_classname="OwnHashMapProto";

message KeyValuePair {
    string key = 1;
    google.protobuf.Any value = 2;
}

message MyMessage {
    repeated KeyValuePair keyValues = 1;
}